@@ -25,7 +25,7 @@ src/*_test
 src/config.h
 src/config.h.in
 src/sndfile-generate-chirp
+src/sndfile-jackplay
 src/sndfile-mix-to-mono
 src/sndfile-spectrogram
 src/stamp-h1
-src/sndfile-merge
