@@ -9,6 +9,9 @@
     * M4/extra_pkg.m4 configure.ac
     Add M4 macro for using in configure.ac to find the JACK library.
 
+    * Makefile.am
+    Fix build after previous changes.
+
 2009-11-28  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * src/sndfile-spectrogram.c
